objects/LLC_BI__Loan__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Credit_Memo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is automatically populated when a credit memo template is selected. This field is a lookup field that specifies the credit memo associated to the loan.</description>
        <label>Credit Memo</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LLC_BI__Credit_Memo__c.LLC_BI__Is_Template__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LLC_BI__Credit_Memo__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Current_Gross_Lendable_Value_Collateral1__c</fullName>
        <description>This field is automatically populated via a roll-up. It stores the current gross lendable value of all collateral based on advance rate. This field is used with old collateral structure only, not Collateral Management.</description>
        <label>Current Gross Lendable Value</label>
        <summarizedField>LLC_BI__Loan_Collateral__c.LLC_BI__Gross_Lendable_Value__c</summarizedField>
        <summaryForeignKey>LLC_BI__Loan_Collateral__c.LLC_BI__Loan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Current_Interest_Rate__c</fullName>
        <description>This field is optional. It is manually populated. This field is used to specify the current interest rate the loan is subject to.</description>
        <label>Current Interest Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Current_LTV_Collateral1__c</fullName>
        <description>This field is automatically populated via a formula. It stores the current LTV based on Collateral1 records.</description>
        <formula>(LLC_BI__Amount__c + LLC_BI__Total_Prior_Lien_Amount_Collateral1__c) / LLC_BI__Gross_Collateral1_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates LTV. Advance Rate is not considered in this calculation.</inlineHelpText>
        <label>Current LTV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Current_LTV__c</fullName>
        <description>This field is automatically populated via a formula. It stores the current LTV of the loan based on its Collateral Mgmt records. If the Product Feature is NOT a Line of Credit, or if the Product Feature does not exist, this is the formula: (Principal Balance + Total Prior Lien Amount from all Collateral)/ Collateral Value from all Collateral. If the Product Feature is a Line of Credit, this is the formula: Original Loan Amount / (Collateral Value from all Collateral - Total Prior Lien Amount from all Collateral)</description>
        <formula>IF(LLC_BI__Total_Collateral_Value__c - LLC_BI__Total_Superior_Lien_Amount__c == 0, 0, IF( (LLC_BI__Product_Reference__r.LLC_BI__Product_Feature__c != null &amp;&amp; LLC_BI__Product_Reference__r.LLC_BI__Product_Feature__r.LLC_BI__Line_Of_Credit__c == true) || NOT(LLC_BI__Is_Booked__c) ,(LLC_BI__Amount__c + LLC_BI__Total_Superior_Lien_Amount__c) / LLC_BI__Total_Collateral_Value__c, (LLC_BI__Principal_Balance__c + LLC_BI__Total_Superior_Lien_Amount__c) / LLC_BI__Total_Collateral_Value__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Principal Balance or Loan Amount - Total Prior Lien Amount from all Collateral) / Collateral Value from all Collateral</inlineHelpText>
        <label>Current LTV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Current_Total_Lendable_Value__c</fullName>
        <description>This field is automatically populated via a formula. It stores lendable value based on all Collateral Mgmt records.</description>
        <formula>LLC_BI__Loan_Collateral_Aggregate__r.LLC_BI__Current_Total_Lendable_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of all collateral lendable value</inlineHelpText>
        <label>Current Gross Lendable Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Days_to_Close__c</fullName>
        <description>This field is automatically populated via a formula. It stores the number of days from the date the loan was created to the date the loan closed.</description>
        <formula>ROUND(LLC_BI__Closed_Date__c - DATEVALUE(CreatedDate),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Default_App__c</fullName>
        <defaultValue>&apos;loan.dashboard-loan&apos;</defaultValue>
        <description>This field is required. When using the nCino UI, this field should be set via a workflow. This field is used to determine the default landing page for this loan within the nCino User Interface.</description>
        <inlineHelpText>This field is used to determine the default landing page for this loan within the nCino User Interface.</inlineHelpText>
        <label>Default App</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Depth__c</fullName>
        <description>This number field auto-populates and specifies the level of depth of the multi-tiered loan facility: Main= 1, Limit=2, Sublimit= 3, Takedown=4. This is one of the components used to drive the visual representation of multi-tiered loan facilities.</description>
        <formula>IF(
 AND(
  NOT(ISNULL(LLC_BI__Product_Package__c)),
  LLC_BI__Is_Main__c
 ),1,IF(LLC_BI__ParentLoan__r.LLC_BI__Is_Main__c, 2, IF(LLC_BI__ParentLoan__r.LLC_BI__Is_Limit__c , 3, IF(LLC_BI__ParentLoan__r.LLC_BI__Is_Sublimit__c, 4, 100))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Depth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>This field is optional. It is manually populated. This is a free text field that can be used to describe the purpose of the loan.</description>
        <label>Loan Purpose</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Disbursement_Description__c</fullName>
        <description>This field is optional. It is manually populated. This field is a picklist, used to specify how the loan is being disbursed.</description>
        <label>Disbursement Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
                <value>
                    <fullName>Payable</fullName>
                </value>
                <value>
                    <fullName>PayOff</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>NonLoan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Employee_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected. This checkbox is used to specify when a loan belongs to an employee of the financial institution. The employee has entity involvement on this loan.</description>
        <inlineHelpText>This checkbox is used to specify when a loan belongs to an employee of the financial institution. The employee has entity involvement on this loan.</inlineHelpText>
        <label>Employee Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fee_Loan_Aggregate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is automatically populated when a Fee is created. It is a lookup to an object that aggregates all the fee information related to this loan.</description>
        <inlineHelpText>Object that aggregates all the fee information related to this loan.</inlineHelpText>
        <label>Fee Loan Aggregate</label>
        <referenceTo>LLC_BI__Fee_Loan_Aggregate__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__File_Number__c</fullName>
        <description>This field is optional. It is manually populated. This text field is used to specify a reference number used for attorney records.</description>
        <inlineHelpText>Attorney&apos;s reference number</inlineHelpText>
        <label>File Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__First_Payment_Date__c</fullName>
        <description>This field is optional, but required when using payment structure. It is manually populated. It sets the first payment date of a loan repayment schedule. When used with payment structure, this field is used to determine amortization and complex payments.</description>
        <inlineHelpText>First Payment date is the expected date the first loan payment will be made. This field is used to determine amortization and complex payments.</inlineHelpText>
        <label>First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__First_Rate_Increase__c</fullName>
        <description>The system automatically populates this optional field using values from the Product Feature with how much the interest rate increases for the first rate increase.</description>
        <inlineHelpText>This system-populated field displays how much the interest rate increases for the first rate increase.</inlineHelpText>
        <label>First Rate Increase</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Funded__c</fullName>
        <description>This field is optional. It is manually populated. This field is used to show the funding percentage of a loan.</description>
        <label>% Funded</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Funding__c</fullName>
        <description>This field is automatically populated via formula. It populates based on total amount and the amount disbursed. This field specifies the percentage of the loan amount funded.</description>
        <formula>IF( LLC_BI__Amount__c&lt;&gt;0, LLC_BI__Total_Disbursed__c / LLC_BI__Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Funding_at_Close__c</fullName>
        <description>This field is optional. It is manually populated. It is used to specify the amount funded at closing.</description>
        <label>Funding at Close</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__GTD_Balance__c</fullName>
        <description>This field is optional. It is manually populated. This currency field is used to specify the total principal amount that is guaranteed by the government.</description>
        <label>GTD Balance</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__GTD_Participated_Balance__c</fullName>
        <description>This field is optional. It is manually populated. This currency field is used to specify the amount of the guaranteed loan that is participated.</description>
        <label>GTD Participated Balance</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__GTD_Participated_Percent__c</fullName>
        <description>This field is automatically populated via a formula. It is populated using a calculation of the participated balance and principal balance. This field is used to specify the percentage of the loan that is participated.</description>
        <formula>IF( LLC_BI__Principal_Balance__c&lt;&gt;0, LLC_BI__GTD_Participated_Balance__c / LLC_BI__Principal_Balance__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GTD Participated %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Governing_Law_State__c</fullName>
        <description>Represents the location of the bank or the jurisdiction it is governed by, may be used to determine the state-specific language that shows up in documents.</description>
        <inlineHelpText>The jurisdiction/state law governing the loan</inlineHelpText>
        <label>Governing Law State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Gross_Collateral1_Value__c</fullName>
        <description>This field is automatically populated via roll-up. It stores the gross value of all Loan_Collateral__c records.</description>
        <label>Gross Collateral Value</label>
        <summarizedField>LLC_BI__Loan_Collateral__c.LLC_BI__Collateral_Value__c</summarizedField>
        <summaryForeignKey>LLC_BI__Loan_Collateral__c.LLC_BI__Loan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Guarantee_Fee_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected. When enabled, it indicates that the guarantee fee has been paid to SBA. When disabled, it indicates that the guarantee fee has not been paid to SBA. By default, this is disabled.</description>
        <label>Guarantee Fee Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Action_Taken__c</fullName>
        <description>This field is a optional, except for loans that require HMDA, and then it is required. It is manually populated. This field indicates the type of action the FI took on the loan, application, or preapproval request.</description>
        <inlineHelpText>Use the appropriate code to categorize the entry as a loan origination, a purchased loan, or an application (including a preapproval request) that did not result in an origination.</inlineHelpText>
        <label>Action Taken</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code 1—Loan originated</fullName>
                </value>
                <value>
                    <fullName>Code 2—Application approved but not accepted</fullName>
                </value>
                <value>
                    <fullName>Code 3—Application denied</fullName>
                </value>
                <value>
                    <fullName>Code 4—Application withdrawn</fullName>
                </value>
                <value>
                    <fullName>Code 5—File closed for incompleteness</fullName>
                </value>
                <value>
                    <fullName>Code 6—Loan purchased by your institution</fullName>
                </value>
                <value>
                    <fullName>Code 7—Preapproval request denied</fullName>
                </value>
                <value>
                    <fullName>Code 8—Preapproval request approved but not accepted (optional reporting)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Amount__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates the dollar amount granted or requested (in thousands).</description>
        <inlineHelpText>Report the dollar amount granted or requested in thousands.</inlineHelpText>
        <label>Loan Amount (Amount in Thousands)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Census_Tract_Text__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates the census tract number, as defined by the U.S. Census Bureau, of the property securing the loan (or proposed to secure a loan).</description>
        <inlineHelpText>Census tract</inlineHelpText>
        <label>Census Tract (####.## format)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Census_Tract__c</fullName>
        <description>Census tract numbers as reported in the 2010 census. Used in HMDA reporting</description>
        <inlineHelpText>Census tract</inlineHelpText>
        <label>Census Tract (####.## format)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Co_Applicant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to indicate that there is co-applicant related to the loan for purposed of HMDA reporting.</description>
        <label>Co-Applicant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Date_Action_Taken__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates the type of action the financial institution took on the loan, application, or pre-approval request.</description>
        <inlineHelpText>Enter the settlement or closing date for originations.</inlineHelpText>
        <label>Date Action Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Date_Application_Received__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates the date the application was received or the date on the application form.</description>
        <inlineHelpText>The date the loan application was received by your institution.</inlineHelpText>
        <label>Date Application Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Date_Rate_Set__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This date is used to determine the average prime offer rate for a comparable transaction is the date on which the loan&apos;s interest rate was set by the financial institution for the final time before closing.</description>
        <label>Date Interest Rate Set</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Denial_Reasons__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates the principal reason, or reasons, for denial.  You may enter up to three (3) applicable codes.</description>
        <label>Denial Reasons (May select up to three)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code 1—Debt-to-income ratio</fullName>
                </value>
                <value>
                    <fullName>Code 2—Employment history</fullName>
                </value>
                <value>
                    <fullName>Code 3—Credit history</fullName>
                </value>
                <value>
                    <fullName>Code 4—Collateral</fullName>
                </value>
                <value>
                    <fullName>Code 5—Insufficient cash</fullName>
                </value>
                <value>
                    <fullName>Code 6—Unverifiable information</fullName>
                </value>
                <value>
                    <fullName>Code 7—Credit application incomplete</fullName>
                </value>
                <value>
                    <fullName>Code 8—Mortgage insurance denied</fullName>
                </value>
                <value>
                    <fullName>Code 9—Other</fullName>
                </value>
                <value>
                    <fullName>Withdrawn or closed for incompleteness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_FIPS_County_Code_Text__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates the three-digit Federal Information Processing Standards (FIPS) County Code of the property securing the loan (or proposed to secure a loan)</description>
        <inlineHelpText>FIPS County Code</inlineHelpText>
        <label>Three Digit County Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_FIPS_County_Code__c</fullName>
        <description>--DEPRECATED-- The three-digit code for the county. Used in HMDA.</description>
        <inlineHelpText>FIPS County Code</inlineHelpText>
        <label>-D Three Digit County Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_FIPS_State_Code_Text__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates the state of the property securing the loan (or that has been proposed to secure a loan).</description>
        <inlineHelpText>FIPS State Code</inlineHelpText>
        <label>Two Digit State Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_FIPS_State_Code__c</fullName>
        <description>--DEPRECATED-- The two digit code for the state.</description>
        <inlineHelpText>FIPS State Code</inlineHelpText>
        <label>-D Two Digit State Code</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_HOEPA_Status__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates whether the loan is a high-cost mortgage under the Home Ownership and Equity Protection Act (HOEPA).</description>
        <label>HOEPA Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code 1 - For a loan that you originated or purchased that is subject to the Home Ownership and Equity Protection Act of 1994 (HOEPA), because the APR or the points and fees on the loan exceed the HOEPA triggers</fullName>
                </value>
                <value>
                    <fullName>Code 2 - all other cases</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Lien_Status__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates whether the property is a first or subordinate lien.</description>
        <label>Lien Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code 1—Secured by a first lien.</fullName>
                </value>
                <value>
                    <fullName>Code 2—Secured by a subordinate lien.</fullName>
                </value>
                <value>
                    <fullName>Code 3—Not secured by a lien.</fullName>
                </value>
                <value>
                    <fullName>Code 4—Not applicable (purchased loan)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Loan_ID__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates the unique loan or loan application number.</description>
        <formula>CASESAFEID(Id)</formula>
        <inlineHelpText>HMDA Loan ID</inlineHelpText>
        <label>Loan Identification Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_MSA_MD_Number_Text__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates the five-digit metropolitan statistical area (MSA) number or, if available, the five-digit metropolitan division (MD) number.</description>
        <inlineHelpText>Five Digit MSA/MD Number</inlineHelpText>
        <label>Five Digit MSA/MD Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_MSA_MD_Number__c</fullName>
        <description>--Deprecated-- The five-digit metropolitan statistical area (MSA) number or, if available, the five-digit metropolitan division (MD) number. Used in HMDA reporting.</description>
        <label>-D Five Digit MSA/MD Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Occupancy__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This picklist field indicates whether the property will be owner-occupied as a principal dwelling, not owner-occupied, or N/A.</description>
        <label>Occupancy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code 1—Owner-occupied as a principal dwelling</fullName>
                </value>
                <value>
                    <fullName>Code 2—Not owner-occupied as a principal dwelling</fullName>
                </value>
                <value>
                    <fullName>Code 3—Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Preapproval_Requested__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates whether the transaction involved a pre-approval request for a home purchase loan under a pre-approval program.</description>
        <label>Request for Preapproval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code 1—Preapproval requested</fullName>
                </value>
                <value>
                    <fullName>Code 2—Preapproval not requested</fullName>
                </value>
                <value>
                    <fullName>Code 3—Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Type__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates whether the loan or application was for manufactured housing, a multifamily dwelling, or a one- to-four-family dwelling other than manufactured housing.</description>
        <inlineHelpText>Report whether the loan or application was for manufactured housing, a multifamily dwelling, or a one- to-four-family dwelling other than manufactured housing.</inlineHelpText>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code 1—One- to four-family dwelling (other than manufactured housing)</fullName>
                </value>
                <value>
                    <fullName>Code 2—Manufactured housing</fullName>
                </value>
                <value>
                    <fullName>Code 3—Multifamily dwelling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Purchaser_Type__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates the type of entity that purchased the loan.</description>
        <label>Type of Purchase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code 0—Loan was not originated or was not sold in calendar year covered by register</fullName>
                </value>
                <value>
                    <fullName>Code 1—Fannie Mae (FNMA)</fullName>
                </value>
                <value>
                    <fullName>Code 2—Ginnie Mae (GNMA)</fullName>
                </value>
                <value>
                    <fullName>Code 3—Freddie Mac (FHLMC)</fullName>
                </value>
                <value>
                    <fullName>Code 4—Farmer Mac (FAMC)</fullName>
                </value>
                <value>
                    <fullName>Code 5—Private securitization</fullName>
                </value>
                <value>
                    <fullName>Code 6—Commercial bank, savings bank, or savings association</fullName>
                </value>
                <value>
                    <fullName>Code 7—Life insurance company, credit union, mortgage bank, or finance company</fullName>
                </value>
                <value>
                    <fullName>Code 8—Affiliate institution</fullName>
                </value>
                <value>
                    <fullName>Code 9—Other type of purchaser</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>